// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add 1`] = `
Array [
  "headA",
  "headB",
  "middleA",
  "middleB",
  "tailA",
  "tailB",
]
`;

exports[`getDeltaPairs 1`] = `
"
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
  ignore: root/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
  ignore: root/container/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/.myignore.yml
  ignore: root/container/withDeltaFileEverywhere/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInBar
      filename: root/container/withDeltaFileEverywhere/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/bar/.myignore.yml
  ignore: root/container/withDeltaFileEverywhere/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInFoo
      filename: root/container/withDeltaFileEverywhere/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/foo/.myignore.yml
  ignore: root/container/withDeltaFileEverywhere/foo/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yml
  ignore: root/container/withDeltaFileInContainerOnly/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/bar/.myignore.yml
  ignore: root/container/withDeltaFileInContainerOnly/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/foo/.myignore.yml
  ignore: root/container/withDeltaFileInContainerOnly/foo/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yml
  ignore: root/container/withDeltaFileInSubfolderOnly/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInBar
      filename: root/container/withDeltaFileInSubfolderOnly/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/bar/.myignore.yml
  ignore: root/container/withDeltaFileInSubfolderOnly/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInFoo
      filename: root/container/withDeltaFileInSubfolderOnly/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/foo/.myignore.yml
  ignore: root/container/withDeltaFileInSubfolderOnly/foo/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yml
  ignore: root/container/withoutAnyDeltaFile/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/bar/.myignore.yml
  ignore: root/container/withoutAnyDeltaFile/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/foo/.myignore.yml
  ignore: root/container/withoutAnyDeltaFile/foo/.myignore

"
`;

exports[`getDeltaPairs 2`] = `
"
- delta: []
  ignore: root/.myignore
- delta: []
  ignore: root/container/.myignore
- delta:
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
  ignore: root/container/withDeltaFileEverywhere/.myignore
- delta:
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInBar
      filename: root/container/withDeltaFileEverywhere/bar/.myignore.yaml
  ignore: root/container/withDeltaFileEverywhere/bar/.myignore
- delta:
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInFoo
      filename: root/container/withDeltaFileEverywhere/foo/.myignore.yaml
  ignore: root/container/withDeltaFileEverywhere/foo/.myignore
- delta:
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
  ignore: root/container/withDeltaFileInContainerOnly/.myignore
- delta:
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
  ignore: root/container/withDeltaFileInContainerOnly/bar/.myignore
- delta:
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
  ignore: root/container/withDeltaFileInContainerOnly/foo/.myignore
- delta: []
  ignore: root/container/withDeltaFileInSubfolderOnly/.myignore
- delta:
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInBar
      filename: root/container/withDeltaFileInSubfolderOnly/bar/.myignore.yaml
  ignore: root/container/withDeltaFileInSubfolderOnly/bar/.myignore
- delta:
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInFoo
      filename: root/container/withDeltaFileInSubfolderOnly/foo/.myignore.yaml
  ignore: root/container/withDeltaFileInSubfolderOnly/foo/.myignore
- delta: []
  ignore: root/container/withoutAnyDeltaFile/.myignore
- delta: []
  ignore: root/container/withoutAnyDeltaFile/bar/.myignore
- delta: []
  ignore: root/container/withoutAnyDeltaFile/foo/.myignore

"
`;

exports[`getFilePairs 1`] = `
"
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
  ignore: root/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
  ignore: root/container/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/.myignore.yml
  ignore: root/container/withDeltaFileEverywhere/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInBar
      filename: root/container/withDeltaFileEverywhere/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/bar/.myignore.yml
  ignore: root/container/withDeltaFileEverywhere/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileEverywhere/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInFoo
      filename: root/container/withDeltaFileEverywhere/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileEverywhere/foo/.myignore.yml
  ignore: root/container/withDeltaFileEverywhere/foo/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yml
  ignore: root/container/withDeltaFileInContainerOnly/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/bar/.myignore.yml
  ignore: root/container/withDeltaFileInContainerOnly/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content:
        append:
          - tailContainer123
          - tailContainer456
        prepend:
          - headContainer123
          - headContainer456
        remove:
          - notInContainer
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInContainerOnly/foo/.myignore.yml
  ignore: root/container/withDeltaFileInContainerOnly/foo/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yml
  ignore: root/container/withDeltaFileInSubfolderOnly/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInBar
      filename: root/container/withDeltaFileInSubfolderOnly/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/bar/.myignore.yml
  ignore: root/container/withDeltaFileInSubfolderOnly/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yaml
    - content:
        append:
          - tailFoo123
          - tailFoo456
        prepend:
          - headFoo123
          - headFoo456
        remove:
          - notInFoo
      filename: root/container/withDeltaFileInSubfolderOnly/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/.myignore.yml
    - content: {}
      filename: root/container/withDeltaFileInSubfolderOnly/foo/.myignore.yml
  ignore: root/container/withDeltaFileInSubfolderOnly/foo/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yml
  ignore: root/container/withoutAnyDeltaFile/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/bar/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/bar/.myignore.yml
  ignore: root/container/withoutAnyDeltaFile/bar/.myignore
- delta:
    - content: {}
      filename: root/.myignore.yaml
    - content: {}
      filename: root/container/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yaml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/foo/.myignore.yaml
    - content: {}
      filename: root/.myignore.yml
    - content: {}
      filename: root/container/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/.myignore.yml
    - content: {}
      filename: root/container/withoutAnyDeltaFile/foo/.myignore.yml
  ignore: root/container/withoutAnyDeltaFile/foo/.myignore

"
`;

exports[`getIgnoreFiles 1`] = `
Array [
  "root/.myignore",
  "root/container/.myignore",
  "root/container/withDeltaFileEverywhere/.myignore",
  "root/container/withDeltaFileEverywhere/bar/.myignore",
  "root/container/withDeltaFileEverywhere/foo/.myignore",
  "root/container/withDeltaFileInContainerOnly/.myignore",
  "root/container/withDeltaFileInContainerOnly/bar/.myignore",
  "root/container/withDeltaFileInContainerOnly/foo/.myignore",
  "root/container/withDeltaFileInSubfolderOnly/.myignore",
  "root/container/withDeltaFileInSubfolderOnly/bar/.myignore",
  "root/container/withDeltaFileInSubfolderOnly/foo/.myignore",
  "root/container/withoutAnyDeltaFile/.myignore",
  "root/container/withoutAnyDeltaFile/bar/.myignore",
  "root/container/withoutAnyDeltaFile/foo/.myignore",
]
`;

exports[`writeIgnoreFiles 1`] = `
"
.myignore: |

  # to be included
  root123
  root456

  # some are eliminated
  notInContainer
  notInFoo
  notInBar

  # in addition, comments are eliminated
container:
  withDeltaFileEverywhere:
    .myignore: |-
      headContainer123
      headContainer456
      root123
      root456
      notInFoo
      notInBar
      tailContainer123
      tailContainer456
    .myignore.yaml: |
      prepend:
        - headContainer123
        - headContainer456
      append:
        - tailContainer123
        - tailContainer456
      remove:
        - notInContainer
    bar:
      .myignore: |-
        headFoo123
        headFoo456
        headContainer123
        headContainer456
        root123
        root456
        notInFoo
        tailContainer123
        tailContainer456
        tailFoo123
        tailFoo456
      .myignore.yaml: |
        prepend:
          - headFoo123
          - headFoo456
        append:
          - tailFoo123
          - tailFoo456
        remove:
          - notInBar
    foo:
      .myignore: |-
        headFoo123
        headFoo456
        headContainer123
        headContainer456
        root123
        root456
        notInBar
        tailContainer123
        tailContainer456
        tailFoo123
        tailFoo456
      .myignore.yaml: |
        prepend:
          - headFoo123
          - headFoo456
        append:
          - tailFoo123
          - tailFoo456
        remove:
          - notInFoo
  withDeltaFileInContainerOnly:
    .myignore: |-
      headContainer123
      headContainer456
      root123
      root456
      notInFoo
      notInBar
      tailContainer123
      tailContainer456
    .myignore.yaml: |
      prepend:
        - headContainer123
        - headContainer456
      append:
        - tailContainer123
        - tailContainer456
      remove:
        - notInContainer
    bar:
      .myignore: |-
        headContainer123
        headContainer456
        root123
        root456
        notInFoo
        notInBar
        tailContainer123
        tailContainer456
    foo:
      .myignore: |-
        headContainer123
        headContainer456
        root123
        root456
        notInFoo
        notInBar
        tailContainer123
        tailContainer456
  withDeltaFileInSubfolderOnly:
    .myignore: |-
      root123
      root456
      notInContainer
      notInFoo
      notInBar
    bar:
      .myignore: |-
        headFoo123
        headFoo456
        root123
        root456
        notInContainer
        notInFoo
        tailFoo123
        tailFoo456
      .myignore.yaml: |
        prepend:
          - headFoo123
          - headFoo456
        append:
          - tailFoo123
          - tailFoo456
        remove:
          - notInBar
    foo:
      .myignore: |-
        headFoo123
        headFoo456
        root123
        root456
        notInContainer
        notInBar
        tailFoo123
        tailFoo456
      .myignore.yaml: |
        prepend:
          - headFoo123
          - headFoo456
        append:
          - tailFoo123
          - tailFoo456
        remove:
          - notInFoo
  withoutAnyDeltaFile:
    .myignore: |-
      root123
      root456
      notInContainer
      notInFoo
      notInBar
    bar:
      .myignore: |-
        root123
        root456
        notInContainer
        notInFoo
        notInBar
    foo:
      .myignore: |-
        root123
        root456
        notInContainer
        notInFoo
        notInBar

"
`;

exports[`writeIgnoreFiles 2`] = `
"
- - name: root/.myignore
  - content: |

      # to be included
      root123
      root456

      # some are eliminated
      notInContainer
      notInFoo
      notInBar

      # in addition, comments are eliminated
- - name: root/container/withDeltaFileEverywhere/.myignore
  - content: |-
      headContainer123
      headContainer456
      root123
      root456
      notInFoo
      notInBar
      tailContainer123
      tailContainer456
- - name: root/container/withDeltaFileEverywhere/bar/.myignore
  - content: |-
      headFoo123
      headFoo456
      headContainer123
      headContainer456
      root123
      root456
      notInFoo
      tailContainer123
      tailContainer456
      tailFoo123
      tailFoo456
- - name: root/container/withDeltaFileEverywhere/foo/.myignore
  - content: |-
      headFoo123
      headFoo456
      headContainer123
      headContainer456
      root123
      root456
      notInBar
      tailContainer123
      tailContainer456
      tailFoo123
      tailFoo456
- - name: root/container/withDeltaFileInContainerOnly/.myignore
  - content: |-
      headContainer123
      headContainer456
      root123
      root456
      notInFoo
      notInBar
      tailContainer123
      tailContainer456
- - name: root/container/withDeltaFileInContainerOnly/bar/.myignore
  - content: |-
      headContainer123
      headContainer456
      root123
      root456
      notInFoo
      notInBar
      tailContainer123
      tailContainer456
- - name: root/container/withDeltaFileInContainerOnly/foo/.myignore
  - content: |-
      headContainer123
      headContainer456
      root123
      root456
      notInFoo
      notInBar
      tailContainer123
      tailContainer456
- - name: root/container/withDeltaFileInSubfolderOnly/.myignore
  - content: |-
      root123
      root456
      notInContainer
      notInFoo
      notInBar
- - name: root/container/withDeltaFileInSubfolderOnly/bar/.myignore
  - content: |-
      headFoo123
      headFoo456
      root123
      root456
      notInContainer
      notInFoo
      tailFoo123
      tailFoo456
- - name: root/container/withDeltaFileInSubfolderOnly/foo/.myignore
  - content: |-
      headFoo123
      headFoo456
      root123
      root456
      notInContainer
      notInBar
      tailFoo123
      tailFoo456
- - name: root/container/withoutAnyDeltaFile/.myignore
  - content: |-
      root123
      root456
      notInContainer
      notInFoo
      notInBar
- - name: root/container/withoutAnyDeltaFile/bar/.myignore
  - content: |-
      root123
      root456
      notInContainer
      notInFoo
      notInBar
- - name: root/container/withoutAnyDeltaFile/foo/.myignore
  - content: |-
      root123
      root456
      notInContainer
      notInFoo
      notInBar

"
`;
